<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Название приложения на рабочем столе устройства -->
    <string name="app_name">Динамика дня</string>
    <!-- Логотип -->
    <string name="ria_novosti">РИА Новости</string>
    <!-- Логотип -->
    <string name="dynamics_of_the_day">Динамика дня</string>
    <string name="choose_lang_title">Выберите язык</string>
    <string name="choose_lang_info">Вы всегда можете поменять язык в настройках приложения</string>
    <string name="lang_ru">Русский</string>
    <string name="lang_es">Испанский</string>
    <string name="lang_en">English</string>
    <string name="lang_ar">العربية</string>
    <string name="lang_zh">中文</string>
    <string name="continue_action">Продолжить</string>
    <string name="button_done">Готово</string>
    <string name="try_again">Попробовать ещё раз</string>
    <string name="button_yes">Да</string>
    <string name="button_no">Нет</string>
    <string name="connection_error_title">Ошибка соединения</string>
    <string name="connection_error_info">Не удается подключиться к удаленному серверу, убедитесь, что интернет
        соединение активно, и повторите запрос.
    </string>
    <!-- Название раздела внутри приложения -->
    <string name="news_tab_title">Динамика дня</string>
    <string name="news_today">Сегодня</string>
    <string name="news_show_new_articles">Показать новые статьи</string>
    <string name="news_no_content">Статьи отсутствуют</string>
    <string name="news_sharing_title">Поделиться</string>
    <string name="search_hint">Поиск</string>
    <string name="search_in_progress">Поиск ...</string>
    <string name="search_no_results">Поиск не дал результатов</string>
    <string name="search_period">Период:</string>
    <string name="search_period_from">С</string>
    <string name="search_period_to">По</string>
    <string name="search_period_default">Не задан</string>
    <string name="search_mode_all_words">Все слова</string>
    <string name="search_mode_phrase">Совпадение фраз</string>
    <string name="search_mode_one_of">Одно слово</string>
    <string name="search_reset">Сбросить</string>
    <!-- Название раздела внутри приложения -->
    <string name="tapes_tab_title">Мои ленты</string>
    <string name="tapes_no_tapes">Для создания собственных лент \nнажмите на плюс</string>
    <string name="tapes_creation_hint">Введите поисковый запрос ...</string>
    <string name="tapes_created">Лента добавлена</string>
    <string name="tapes_remove">Удалить новостную ленту</string>
    <string name="tapes_delete">Удалить</string>
    <string name="tapes_tape_no_content">Статьи отсутствуют\nПри появлении статьи\nВы получите уведомление</string>
    <!-- Название раздела внутри приложения -->
    <string name="settings_tab_title">Настройки</string>
    <string name="settings_notification_title">Уведомления</string>
    <string name="settings_notification_all_news">Все новости</string>
    <string name="settings_notification_flashes">Молнии</string>
    <string name="settings_notification_tapes">Мои ленты</string>
    <string name="settings_about_title">О приложении</string>
    <string name="settings_about_version">Версия:</string>
    <string name="settings_about_copyright">© МИА Россия сегодня</string>
    <string name="settings_about_text">Спасибо, что Вы установили мобильное приложение «Динамика дня». Оно предназначено
        в первую очередь для профессиональной аудитории, включая представителей органов власти и
        бизнеса.\n\nКонтакты:\n\nТел.: +7 (495) 645-6405\n\nФакс: +7 (495) 637-2746\n\nE-mail: podpiska@rian.ru;
        sales@rian.ru
    </string>
    <string name="settings_lang_title">Язык</string>
    <string name="sharing_postfix">© РИА Новости</string>
    <string name="promo_alert_open">Открыть</string>
    <string name="promo_alert_notification_title">Включить уведомления для ленты</string>
    <string name="promo_alert_notification_message">В дальнейшем уведомления всегда можно выключить в настройках
    </string>
    <string name="promo_alert_tape_title">Добавлена новая новостная лента</string>
    <string name="promo_alert_tape_message">Лента посвящена</string>
    <string name="terminal_title">Терминал</string>
    <string name="logout">Выйти</string>
    <string name="settings_notification_general_feeds">Основные ленты</string>
    <string name="settings_notification_user_feeds">Мои ленты</string>
    <string name="settings_notification_story_feeds">Сюжеты</string>
    <string name="settings_terminal_login_placeholder">Логин</string>
    <string name="settings_terminal_password_placeholder">Пароль</string>
    <string name="settings_terminal_description">Новостной терминал — круглосуточный сервис доступа к оперативным
        информационным продуктам МИА «Россия сегодня».\nДля оформления доступа обратитесь: sales@rian.ru
    </string>
    <string name="settings_terminal_feed_waitings">Обновление данных</string>
    <string name="settings_terminal_feed_waitings_error">Ошибка загрузки данных</string>
    <string name="done_button">Готово</string>
    <string name="loading">Загрузка</string>
    <string name="create_feed_title">Создать ленту</string>
    <string name="create_feed_query_placeholder">Поисковый запрос*</string>
    <string name="create_feed_title_placeholder">Название ленты</string>
    <string name="create_feed_match_title">Что искать</string>
    <string name="create_feed_match_allwords">Все слова</string>
    <string name="create_feed_match_phrase">Совпадение фраз</string>
    <string name="create_feed_match_any">Одно из слов</string>
    <string name="create_feed_match_extended">Расширеный поиск</string>
    <string name="create_feed_fields_title">Где искать</string>
    <string name="create_feed_fields_head">Заголовки</string>
    <string name="create_feed_fields_body">Текст новости</string>
    <string name="create_feed_fields_keywords">Ключевые слова</string>
    <string name="create_feed_feeds_title">По каким лентам искать</string>
    <string name="create_feed_feeds_all_feeds">По всем лентам</string>
    <string name="choose_feed_title">Выберите ленту</string>
    <string name="article_controller_title">Новость</string>
    <string name="stories_tab_title">Сюжеты</string>
    <string name="create_tape_necessary_text_field">Поле запроса должно быть заполнено</string>
    <string name="cancel">Отмена</string>
    <string name="search_query_empty">Поиск не дал результатов</string>
    <string name="story">Сюжет</string>
    <string name="story_is_empty">Сюжеты отсутсвуют</string>
    <string name="auth_terminal_no_filled_login_or_password">Не указаны логин или пароль</string>
    <string name="auth_terminal_success">Вход в терминал выполнен успешно</string>
    <string name="content_add_user_feed_disabled_save_button_check_query">Не указан поисковый запрос</string>
    <string name="content_add_user_feed_disabled_save_button_check_feeds">Не выбрана лента</string>
    <string name="content_add_user_feed_save_button">Сохранить</string>
    <string name="story_title">Сюжет:</string>
    <string name="login_passsword_error">Неверное имя пользователя или пароль</string>
    <string name="login_cannot_be_empty">Имя пользователя не может быть пустым</string>
    <string name="entered_query">Введите поисковый запрос</string>
    <string name="title_alert_promo_feed">Добавлена новая\nновостная лента</string>
    <string name="push_none">Выключено</string>
    <string name="push_all">Включено</string>
    <string name="push_breaking">Только молнии</string>
    <string name="user_agreement">Политика конфиденциальности</string>
    <string name="using_rules">Правила использования</string>

    <string name="settings_events_title">События</string>
    <string name="promo_alert_cancel">Позже</string>
    <string name="notification_title_when_many">У Вас новые события</string>
    <string name="notification_more_button">ПОДРОБНЕЕ</string>
    <string name="notification_empty_title">События отсутствуют</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_news_list">NewsListActivity</string>
    <string name="title_activity_feed">FeedActivity</string>

</resources>