<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_terminal"
                android:icon="@drawable/ic_menu_terminal"
                android:title="@string/terminal_title"/>
        <item
                android:id="@+id/nav_story"
                android:icon="@drawable/ic_menu_story"
                android:title="@string/stories_tab_title"/>
        <item
                android:id="@+id/nav_tapes"
                android:icon="@drawable/ic_menu_my_feeds"
                android:title="@string/tapes_tab_title"/>
        <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_menu_notifications"
                android:title="@string/settings_notification_title"/>
        <item
                android:id="@+id/nav_events"
                android:title=""
                app:actionLayout="@layout/nav_events_layout"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/settings_about_title"/>
    </group>

</menu>
