<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_news"
                android:icon="@drawable/ic_menu_ddn"
                android:title="@string/news_tab_title"/>
        <item
                android:id="@+id/nav_tapes"
                android:icon="@drawable/ic_menu_my_feeds"
                android:title="@string/tapes_tab_title"/>
        <item
                android:id="@+id/nav_terminal_login"
                android:icon="@drawable/ic_menu_terminal"
                android:title="@string/terminal_title"/>
        <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_menu_notifications"
                android:title="@string/settings_notification_title"/>
        <item
                android:id="@+id/nav_events"
                android:icon="@null"
                android:title="@null"
                app:actionLayout="@layout/nav_events_layout"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/settings_about_title"/>
    </group>
</menu>
