<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="20dp">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RadioGroup
                android:id="@+id/lang_change_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:orientation="vertical">


            <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="?attr/selectableItemBackground"
                    android:button="@null"
                    android:checked="false"
                    android:drawableLeft="@drawable/en"

                    android:drawablePadding="40dp"
                    android:drawableRight="@drawable/radio_btn_selector"

                    android:text="@string/lang_en"
                    android:drawableStart="@drawable/en"
                    android:drawableEnd="@drawable/radio_btn_selector"/>

            <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/es"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="?attr/selectableItemBackground"
                    android:button="@null"
                    android:checked="false"
                    android:drawableLeft="@drawable/es"

                    android:drawablePadding="40dp"
                    android:drawableRight="@drawable/radio_btn_selector"

                    android:text="@string/lang_es"
                    android:drawableStart="@drawable/es"
                    android:drawableEnd="@drawable/radio_btn_selector"/>

            <!-- <android.support.v7.widget.AppCompatRadioButton
                 android:id="@+id/es"
                 android:button="@null"
                 android:drawableRight="@drawable/abc_btn_radio_material"
                 android:drawableLeft="@drawable/es"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:drawablePadding="40dp"
                 android:checked="false"
                 android:text="@string/es" />-->

            <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/ar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="?attr/selectableItemBackground"
                    android:button="@null"
                    android:checked="false"
                    android:drawableLeft="@drawable/ar"

                    android:drawablePadding="40dp"
                    android:drawableRight="@drawable/radio_btn_selector"
                    android:gravity="start|center_vertical"
                    android:text="@string/lang_ar"
                    android:drawableStart="@drawable/ar"
                    android:drawableEnd="@drawable/radio_btn_selector"/>

            <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/zh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="?attr/selectableItemBackground"
                    android:button="@null"
                    android:checked="false"
                    android:drawableLeft="@drawable/ch"

                    android:drawablePadding="40dp"
                    android:drawableRight="@drawable/radio_btn_selector"

                    android:text="@string/lang_zh"
                    android:drawableStart="@drawable/ch"
                    android:drawableEnd="@drawable/radio_btn_selector"/>

        </RadioGroup>
    </ScrollView>
</FrameLayout>
