<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="40dp"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginBottom="40dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="21dp"
                android:src="@drawable/new_feed_dialog_icon"
                tools:src="@drawable/new_feed_dialog_icon" />

            <android.support.v7.widget.AppCompatTextView

                android:id="@+id/promo_quest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="start|top"
                android:text="@string/promo_alert_tape_title"
                android:textColor="@color/list_Item_title_color_black"
                android:textSize="16sp"
                app:fontFamily="@font/roboto_bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:paddingTop="10dp"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="10dp"
                    android:text="@string/promo_alert_cancel"
                    android:textColor="@color/list_Item_title_color_black"
                    android:textSize="14sp"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:paddingTop="10dp"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="10dp"
                    android:text="@string/promo_alert_open"
                    android:textColor="@color/yellow_color_normal"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>


</RelativeLayout>
